<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="add_date_btn_text" translatable="false">Deadline</string>
    <string name="add_name_btn_text">Name</string>
    <string name="add_name_btn_description">Logout</string>

    <!-- Task list -->
    <string name="task_list_title_tv_text">%s\'s tasks</string>
    <string name="task_list_todo_mb_text">To do</string>
    <string name="task_list_done_mb_text">Done</string>
    <string name="task_list_label_btn_description" translatable="false">Labels</string>
    <string name="task_list_filter_btn_description">Filter tasks</string>
    <string name="task_list_sort_btn_description">Sort tasks</string>
    <string name="task_list_add_btn_description">Add task</string>
    <string name="task_list_logout_btn_title_text">Are you sure you want to log out?</string>
    <string name="task_adapter_due_tv_text">Due:</string>
    <string name="task_adapter_completed_tv_text">Completed:</string>

    <string name="popup_sort_title_text">Sort by deadline</string>
    <string name="popup_sort_default_text">Default</string>
    <string name="popup_sort_descending_text">Descending</string>
    <string name="popup_sort_ascending_text">Ascending</string>
    <string name="popup_filter_title_text">Filter by label</string>
    <string name="popup_filter_all_text">All</string>

    <string name="task_delete_message_text">Are you sure you want to delete this task? \n\nThis cannot be undone.</string>

    <!-- Register -->
    <string name="register_title">Register</string>
    <string name="register_name_et_hint">Your name</string>
    <string name="register_retype_password_et_hint">Retype password</string>
    <string name="register_login_instead_tv_text">Login instead</string>
    <string name="register_register_btn_title">Register</string>
    <string name="register_registered_toast">Account created, you are being logged in automatically</string>
    <string name="register_validation_username_in_use">Username already in use</string>
    <string name="register_validation_username_cannot_contain_whitespace">Username cannot contain whitespace</string>
    <string name="register_validation_passwords_not_equal">Passwords not equal</string>
    <string name="register_validation_password_too_short">Password too short</string>
    <string name="register_validation_password_too_simple">Password may not consist of all the same characters</string>
    <string name="register_validation_password_is_known_string">Password too easy to guess</string>

    <!-- Login -->
    <string name="login_title">Login</string>
    <string name="login_register_instead_tv_text">Register instead</string>
    <string name="login_login_btn_title">Login</string>
    <string name="login_validation_invalid_credentials">Incorrect credentials</string>
    <string name="login_logged_in_toast">Logged in as %s</string>

    <!-- Register/Login -->
    <string name="username_et_hint">Username</string>
    <string name="password_et_hint">Password</string>
    <string name="validation_field_empty">Field cannot be empty</string>

    <!-- AddEdit-->
    <string name="add_edit_title_pt">Create task</string>
    <string name="add_edit_deadline_dt">Deadline (yyyy-mm-dd hh:mm) or empty</string>
    <string name="edit_name_ti_text">Name</string>
    <string name="add_edit_description_ti_text">Description</string>
    <string name="add_edit_save_btn_id">Save</string>
    <string name="add_edit_label_sp_text" translatable="false">Label</string>
    <string name="add_edit_clear_btn_id">Clear</string>
    <string name="edit_edit_title_pt">Edit task</string>
    <string name="toast_error_text">Please check all fields</string>

    <!--view-->
    <string name="view_name_task_tv">Name Task</string>
    <string name="view_deadline_tv" translatable="false">Deadline</string>
    <string name="view_description_tv">Description</string>
    <string name="view_completed_tv">Completed</string>
    <string name="add_edit_description_et">Description</string>
    <string name="view_edit_btn_id">Edit</string>
    <string name="edit_name_lbl_tv">Name:</string>
    <string name="edit_deadline_lbl_tv" translatable="false">Deadline:</string>
    <string name="edit_completed_lbl_tv">Completed:</string>
    <string name="edit_label_lbl_tv" translatable="false">Label:</string>
    <string name="edit_description_lbl_tv">Description:</string>
    <string name="view_view_task_tv">View task</string>
    <string name="view_in_progress_text">In progress</string>

    <!-- Labels -->
    <string name="labels_title">Labels</string>
    <string name="label_delete_dialog_contents">Are you sure to delete this label?\n\nDeleting this label will not delete any of the items that currently have it, but it will remove the label from them.</string>
    <string name="label_edit_dialog_new_title_hint">New title</string>
    <string name="label_edit_dialog_save_btn">Save</string>
    <string name="label_create_dialog_title">New label</string>
    <string name="label_create_dialog_title_hint">Title</string>
    <string name="label_create_dialog_create_btn">Create</string>
    <string name="delete_label_text">Delete label</string>
    <string name="label_error_empty_text">Empty not allowed</string>
    <string name="label_error_spaces_text">No spaces at begin of end allowed</string>
    <string name="label_error_unique_text">Label must be unique</string>


    <!-- Generic -->
    <string name="no_label_text">No label</string>
    <string name="no_deadline_text">No deadline</string>
    <string name="no_description_text">No description</string>
    <string name="alert_confirm_text">YES</string>
    <string name="alert_cancel_text">NO</string>
    <string name="task_delete_title_text">Delete task</string>
    <string name="back_btn_text">Back</string>
    <string name="cancel_btn_text">Cancel</string>



    <!-- Date/Time edit dialog -->
    <string name="date_edit_dialog_title">Change date/time</string>
    <string name="date_edit_dialog_clear_btn">Clear</string>
    <string name="date_edit_dialog_ok_btn">OK</string>
</resources>